--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/Jguiro09/Progressive-Budget/issues"
   },
-  "homepage": "https://github.com/Jguiro09/Progressive-Budget#readme"
+  "homepage": "https://github.com/Jguiro09/Progressive-Budget#readme",
+  "dependencies": {
+    "compression": "^1.7.4",
+    "express": "^4.17.1",
+    "mongoose": "^5.13.8",
+    "morgan": "^1.10.0"
+  }
 }
